--- a/.github/workflows/hijau.yml
+++ b/.github/workflows/hijau.yml
@@ -5,7 +5,7 @@ on:
     - cron: '*/2 * * * *'  # Menjalankan commit otomatis setiap 2 menit
   push:
     branches:
-      - main  # Ubah dengan nama cabang yang sesuai jika diperlukan
+      - master  # Ubah dengan nama cabang yang sesuai jika diperlukan
 
 jobs:
   add-files:
